--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 
     <link rel="stylesheet" href="style.css">
 
@@ -75,7 +76,20 @@
     </section>
 <!--fim da home-->
 <!--inicio do about-->
-
+    <section class="about">
+        <div class="swiper2 mySwiper">
+            <div class="swiper-wrapper">
+              <img class="swiper-slide" src="images/SLIDE1CARDS.png" alt="slider1cards">
+              <img class="swiper-slide" src="images/SLIDE2CARDS.png" alt="slider2cards">
+              <img class="swiper-slide" src="images/SLIDE3CARDS.png" alt="slider3cards">
+              <img class="swiper-slide" src="images/SLIDE4CARDS.png" alt="slider4cards">
+            </div>
+        </div>
+        <div class="sobre-texto">
+            <h3>Sobre o site</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui rem eligendi non deleniti, sunt quia tempora debitis aperiam doloribus sequi ipsam fugit obcaecati magni quod numquam! Aliquam, incidunt, doloremque omnis asperiores fugit autem itaque doloribus accusantium, illo hic iure earum. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit deleniti, repellendus quo et nihil ipsum natus accusamus, rerum animi quos rem ab ea, sed corrupti architecto ipsam doloremque enim sit.</p>
+        </div>
+    </section>
 
 <!--fim do about-->
 
@@ -96,6 +110,7 @@
 
 
 <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
 <script src="script.js"></script>
 
