--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 
@@ -76,7 +79,7 @@
     </section>
 <!--fim da home-->
 <!--inicio do about-->
-    <section class="about">
+    <section class="about" id="about">
         <div class="swiper2 mySwiper">
             <div class="swiper-wrapper">
               <img class="swiper-slide" src="images/SLIDE1CARDS.png" alt="slider1cards">
@@ -87,7 +90,7 @@
         </div>
         <div class="sobre-texto">
             <h3>Sobre o site</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui rem eligendi non deleniti, sunt quia tempora debitis aperiam doloribus sequi ipsam fugit obcaecati magni quod numquam! Aliquam, incidunt, doloremque omnis asperiores fugit autem itaque doloribus accusantium, illo hic iure earum. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit deleniti, repellendus quo et nihil ipsum natus accusamus, rerum animi quos rem ab ea, sed corrupti architecto ipsam doloremque enim sit.</p>
+            <p>Esse é um site criado por dois Estudantes de Engenharia de Software, utilizamos de SASS ( css ), HTML e JavaScript, além de uma biblioteca JS simples, chamada AOS, pra dar uns efeitinhos diferentes hehehehe. Dessa forma, o propósito principal do site é auxiliar as nossas namoradas a nos darem presentes, vemos nela uma dificuldade enorme em aflorar o lado criativo do cérebro, e pensar em presentes, e sempre dizem que estão em dificuldade. Portanto, para ajudá-las, e ainda assim, praticar um pouco mais o desenvolvimento front-end, nós desenvolvemos esse site, estamos igualmente envolvidos e engajados no projeto.</p>
         </div>
     </section>
 
