so organizando os produtos

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav class="navbar">
             <a href="#home">home</a>
             <a href="#about">sobre</a>
-            <a href="#pricing">preços</a>
+            <a href="#produtos">produtos</a>
             <a href="#nos">nós</a>
         </nav>
 
@@ -93,8 +93,23 @@
             <p>Esse é um site criado por dois Estudantes de Engenharia de Software, utilizamos de SASS ( css ), HTML e JavaScript, além de uma biblioteca JS simples, chamada AOS, pra dar uns efeitinhos diferentes hehehehe. Dessa forma, o propósito principal do site é auxiliar as nossas namoradas a nos darem presentes, vemos nela uma dificuldade enorme em aflorar o lado criativo do cérebro, e pensar em presentes, e sempre dizem que estão em dificuldade. Portanto, para ajudá-las, e ainda assim, praticar um pouco mais o desenvolvimento front-end, nós desenvolvemos esse site, estamos igualmente envolvidos e engajados no projeto.</p>
         </div>
     </section>
-
 <!--fim do about-->
+<!--inicio dos produtos-->
+    <section class="produtos" id="produtos">
+        <div class="relogios">
+            
+        </div>
+        <div class="camisas">
+
+        </div>
+        <div class="tenis">
+
+        </div>
+        <div class="feitos-a-mao">
+            
+        </div>
+    </section>
+<!--fim dos produtos-->
 
 
 
