--- a/index.html
+++ b/index.html
@@ -97,7 +97,22 @@
 <!--inicio dos produtos-->
     <section class="produtos" id="produtos">
         <div class="relogios">
-            
+            <div class="rlg"><h3>Relógios!</h3>
+            <p>Um relógio é um ótimo presente, tem uns baratinhos e uns mais caros. Aqui vamos colocar algumas opções de relógios que gostaríamos, com diferentes faixas de preço, mas qualquer um ta ótimo.</p></div>
+            <div class="curyevitorrelogio">
+                <div class="curyrelogios">
+                    <h3>CURY</h3>
+                    <div class="samsungrelogio"><a href="https://www.amazon.com.br/Samsung-Smartwatch-Galaxy-Watch6-AMOLED/dp/B0CCQ95ZL2/ref=asc_df_B0CCQ95ZL2/?tag=googleshopp00-20&linkCode=df0&hvadid=647503587076&hvpos=&hvnetw=g&hvrand=8783689302000108985&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1001566&hvtargid=pla-2265560494277&mcid=721b8072077138409fc3b162da5b5a67&th=1" target="_blank"><h4>Smartwatch samsumg</h4></a>
+                    <img src="images/samsungrelogio.png" alt="Samsung-Smartwatch-Galaxy-Watch6-AMOLED">
+                    <p>Um relogio que facilita muito a vida, tem todas as Mesmas funcionalidades de um apple watch e mais barato. O hater da Apple ia adorar.</p></div>
+                </div>
+                <div class="vitorrelogios">
+                    <h3>VITOR</h3>
+                    <div class="salveiirelogio"><a href="https://salveii.com.br/products/salveii-nautilus?gclid=CjwKCAiA9dGqBhAqEiwAmRpTCzrd5t7gjABerYR-vZr1Aa6M6G6XaaV1Ta8V0SGvp-DLo0N1sMGtRhoCVCcQAvD_BwE" target="_blank"><h4>Salveii Nautilus</h4></a>
+                    <img src="images/salveiirelogio.png" alt="Samsung-Smartwatch-Galaxy-Watch6-AMOLED">
+                    <p>Reloginho básico, chique demais e tem fundo verde, minha cor preferida. Gostei demais desse, talvez perderia pro que eu uso todo dia, mas com certeza usaria muito, e é "barato".</p></div>
+                </div>
+            </div>
         </div>
         <div class="camisas">
 
