--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="content">
                         <span>Por Thiago Cury e Vitor Rebula</span>
                         <h3>Não sabe o que comprar? Estamos aqui pra isso!</h3>
-                        <a href="#" class="btn">vamo lá</a>
+                        <a href="#produtos" class="btn">vamo lá</a>
                     </div>
 
                 </div>
@@ -55,7 +55,7 @@
                     <div class="content">
                         <span>-Thiago Cury</span>
                         <h3>"Menos de 500 reais nem fala comigo"</h3>
-                        <a href="#" class="btn">vamo lá</a>
+                        <a href="#produtos" class="btn">vamo lá</a>
                     </div>
 
                 </div>
@@ -65,7 +65,7 @@
                     <div class="content">
                         <span>-Vitor Rebula</span>
                         <h3>"Qualquer coisa do Corinthians eu to aceitando"</h3>
-                        <a href="#" class="btn">vamo lá</a>
+                        <a href="#produtos" class="btn">vamo lá</a>
                     </div>
 
                 </div>
@@ -98,21 +98,32 @@
     <section class="produtos" id="produtos">
         <div class="relogios">
             <div class="rlg"><h3>Relógios!</h3>
-            <p>Um relógio é um ótimo presente, tem uns baratinhos e uns mais caros. Aqui vamos colocar algumas opções de relógios que gostaríamos, com diferentes faixas de preço, mas qualquer um ta ótimo.</p></div>
+            <p>Um relógio é um ótimo presente, tem uns baratinhos e uns mais caros. Aqui vamos colocar algumas opções de relógios que gostaríamos, com diferentes faixas de preço, mas qualquer um ta ótimo.<br> Os nomes em vermelho são links para sites para efetuar a compra.</p></div>
             <div class="curyevitorrelogio">
                 <div class="curyrelogios">
                     <h3>CURY</h3>
                     <div class="samsungrelogio"><a href="https://www.amazon.com.br/Samsung-Smartwatch-Galaxy-Watch6-AMOLED/dp/B0CCQ95ZL2/ref=asc_df_B0CCQ95ZL2/?tag=googleshopp00-20&linkCode=df0&hvadid=647503587076&hvpos=&hvnetw=g&hvrand=8783689302000108985&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1001566&hvtargid=pla-2265560494277&mcid=721b8072077138409fc3b162da5b5a67&th=1" target="_blank"><h4>Smartwatch samsumg</h4></a>
-                    <img src="images/samsungrelogio.png" alt="Samsung-Smartwatch-Galaxy-Watch6-AMOLED">
-                    <p>Um relogio que facilita muito a vida, tem todas as Mesmas funcionalidades de um apple watch e mais barato. O hater da Apple ia adorar.</p></div>
+                        <img src="images/samsungrelogio.png" alt="Samsung-Smartwatch-Galaxy-Watch6-AMOLED">
+                        <p>Um relogio que facilita muito a vida, tem todas as Mesmas funcionalidades de um apple watch e mais barato. O hater da Apple ia adorar.</p>
+                    </div>
+                    <div class="relogiolacoste"><a href="https://www.vivara.com.br/relogio-lacoste-masculino-borracha-branca-2011246-la00001104/p" target="_blank"><h4>Relógio Lacoste Branco</h4></a>
+                        <img src="images/relogiolacostebranco.png" alt="relogio-lacoste-masculino-borracha-branca-2011246-la00001104">
+                        <p>Reloginho da lacoste, lindo demais, tenho um pretinho básico já, mais um branco e eu tenho relógio pra qualquer ocasião.</p>
+                    </div>
                 </div>
                 <div class="vitorrelogios">
                     <h3>VITOR</h3>
                     <div class="salveiirelogio"><a href="https://salveii.com.br/products/salveii-nautilus?gclid=CjwKCAiA9dGqBhAqEiwAmRpTCzrd5t7gjABerYR-vZr1Aa6M6G6XaaV1Ta8V0SGvp-DLo0N1sMGtRhoCVCcQAvD_BwE" target="_blank"><h4>Salveii Nautilus</h4></a>
-                    <img src="images/salveiirelogio.png" alt="Samsung-Smartwatch-Galaxy-Watch6-AMOLED">
-                    <p>Reloginho básico, chique demais e tem fundo verde, minha cor preferida. Gostei demais desse, talvez perderia pro que eu uso todo dia, mas com certeza usaria muito, e é "barato".</p></div>
+                        <img src="images/salveiirelogio.png" alt="Samsung-Smartwatch-Galaxy-Watch6-AMOLED">
+                        <p>Reloginho básico, chique demais e tem fundo verde, minha cor preferida. Gostei demais desse, talvez perderia pro que eu uso todo dia, mas com certeza usaria muito, e é "barato".</p>
+                    </div>
+                    <div class="richesubmariner"><a href="https://richecompany.com.br/collections/relogio/products/relogio-submariner-riche" target="_blank"><h4>Riche Submariner</h4></a>
+                        <img src="images/richesubmariner.png" alt="richesubmariner">
+                        <p>Mesmo caso do relógio da Salveii, muito bonito, com verde, minha cor preferida, porém um pouco mais caro, sinceramente não sei qual eu gosto mais, mas amei os dois. O outro tem um preço melhor, então não sei.</p>
+                    </div>
                 </div>
             </div>
+            
         </div>
         <div class="camisas">
 
