terminei a parte de produtos

--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 
@@ -85,7 +82,6 @@
               <img class="swiper-slide" src="images/SLIDE1CARDS.png" alt="slider1cards">
               <img class="swiper-slide" src="images/SLIDE2CARDS.png" alt="slider2cards">
               <img class="swiper-slide" src="images/SLIDE3CARDS.png" alt="slider3cards">
-              <img class="swiper-slide" src="images/SLIDE4CARDS.png" alt="slider4cards">
             </div>
         </div>
         <div class="sobre-texto">
@@ -98,7 +94,7 @@
     <section class="produtos" id="produtos">
         <div class="relogios">
             <div class="rlg"><h3>Relógios!</h3>
-            <p>Um relógio é um ótimo presente, tem uns baratinhos e uns mais caros. Aqui vamos colocar algumas opções de relógios que gostaríamos, com diferentes faixas de preço, mas qualquer um ta ótimo.<br> Os nomes em vermelho são links para sites para efetuar a compra.</p></div>
+            <p>Um relógio é um ótimo presente, tem uns baratinhos e uns mais caros. Aqui vamos colocar algumas opções de relógios que gostaríamos, com diferentes faixas de preço, mas qualquer um ta ótimo.<br><span>Os nomes em vermelho são links para sites para efetuar a compra.</span></p></div>
             <div class="curyevitorrelogio">
                 <div class="curyrelogios">
                     <h3>CURY</h3>
@@ -119,20 +115,67 @@
                     </div>
                     <div class="richesubmariner"><a href="https://richecompany.com.br/collections/relogio/products/relogio-submariner-riche" target="_blank"><h4>Riche Submariner</h4></a>
                         <img src="images/richesubmariner.png" alt="richesubmariner">
-                        <p>Mesmo caso do relógio da Salveii, muito bonito, com verde, minha cor preferida, porém um pouco mais caro, sinceramente não sei qual eu gosto mais, mas amei os dois. O outro tem um preço melhor, então não sei.</p>
+                        <p>Com minha cor preferida, porém um pouco mais caro, sinceramente não sei qual eu gosto mais, mas amei os dois. O outro tem um preço melhor, então não sei.</p>
                     </div>
                 </div>
             </div>
             
         </div>
         <div class="camisas">
-
+            <div class="cms"><h3>Camisas!</h3>
+                <p>Camisa é o básico, sempre vai ser um bom presente também, Vitor gosta de umas mais basiquinhas sem estampa, estampa atrás, ou do corinthians, e o Thiago gosta de umas mais estampadas.<br><span>Os nomes em vermelho são links para sites para efetuar a compra.</span></p></div>
+                <div class="curyevitorcamisas">
+                    <div class="curycamisas">
+                        <h3>CURY</h3>
+                        <div class="camisacbum"><a href="https://brazini.com.br/products/colecao-camisetas-cbum-legacy?variant=43721391374579" target="_blank"><h4>Camisa do CBUM</h4></a>
+                            <img src="images/camisacbum.png" alt="colecao-camisetas-cbum-legacy?variant">
+                            <p>Uma camiseta oversdized para usar na academia. E nenhuma outra melhor doque a do Mister Olympia. Tecido bom, estilosa da pra usar nos rolês, e ainda te incentiva a ir na academia.</p>
+                        </div>
+                        <div class="camisatrackfield"><a href="https://www.tf.com.br/camiseta-masculina-manga-longa-uv-mesh-oliva/p" target="_blank"><h4>Camisa TRACK & FIELD</h4></a>
+                            <img src="images/camisatrackfield.png" alt="camiseta-masculina-manga-longa-uv-mesh-oliva">
+                            <p>Um otimo pedido para quando fizer um vento mas ainda quer continuar fresco.</p>
+                        </div>
+                    </div>
+                    <div class="vitorcamisas">
+                        <h3>VITOR</h3>
+                        <div class="camisainsider"><a href="https://www.insiderstore.com.br/products/tech-t-shirt?variant=43168998293653" target="_blank"><h4>Camisa Insider</h4></a>
+                            <img src="images/camisainsider.png" alt="Camisa Insider Tech T-Shirt">
+                            <p>Camisa da Insider é um tecido super bom, mas é um pouco cara pra uma camisa branca, eu particularmente amo camisa básica, então sendo lisa sem estampa, qualquer cor é lucro.</p>
+                        </div>
+                        <div class="camisahering"><a href="https://www.hering.com.br/camiseta-basica-masculina-super-cotton-0227n1007s/p?idsku=61561&gad_source=1&gclid=CjwKCAiAu9yqBhBmEiwAHTx5p96eETQDgyPtmsxB2ELDWlw6KTr8RWtjkC8yzHbmh7nnUXVC7HixGhoCO2gQAvD_BwE" target="_blank"><h4>Camisa Hering</h4></a>
+                            <img src="images/camisahering.png" alt="camiseta-basica-masculina-super-cotton-0227n1007s">
+                            <p>Muito boa também, tenho umas 5 pretas, algumas brancas, AMO qualquer cor. Se for comprar, compra essa super cotton, pq a outra é meio vagabunda kkkk</p>
+                        </div>
+                    </div>
+                </div>
         </div>
         <div class="tenis">
-
-        </div>
-        <div class="feitos-a-mao">
-            
+            <div class="tns"><h3>Tênis!</h3>
+                <p>Tênis não é algo tão simples quanto camisa e relógio, pq tema chance de você gastar muito dinheiro, e nós não gostarmos, então repare em nossos gostos para não errar.<br><span>Os nomes em vermelho são links para sites para efetuar a compra.</span></p></div>
+                <div class="curyevitortenis">
+                    <div class="curytenis">
+                        <h3>CURY</h3>
+                        <div class="teniscourt"><a href="https://www.nike.com.br/tenis-nike-court-royale-2-next-nature-masculino-013718.html?cor=5A" target="_blank"><h4>Court Royale</h4></a>
+                            <img src="images/teniscourt.png" alt="tenis-nike-court-royale-2-next-nature-masculino-013718">
+                            <p>Atualmente este tênis está por uma pechincha. Tenis com sola reta. Muito bom para diversas ocasioes, e seu namorado vai andar ainda mais estiloso.</p>
+                        </div>
+                        <div class="teniszoom"><a href="https://www.nike.com.br/tenis-wmns-nike-air-zoom-pegasus-39-021832.html?cor=IE" target="_blank"><h4>Nike Air Zoom Pegasus</h4></a>
+                            <img src="images/nikezoom.png" alt="tenis-wmns-nike-air-zoom-pegasus-39-021832">
+                            <p>Bonito, basico, mas prefiro o court, além de estar beeem mais barato.</p>
+                        </div>
+                    </div>
+                    <div class="vitortenis">
+                        <h3>VITOR</h3>
+                        <div class="teniswayvee"><a href="https://www.vans.com.br/tenis-skate-wayvee-white-green/p/1004600030002U" target="_blank"><h4>Vans Wayvee Green</h4></a>
+                            <img src="images/vans.png" alt="tenis-skate-wayvee-white-green">
+                            <p>Tênis lindo, acho sinceramente maravilhoso, branco e verde, acho que é um dos que eu acho mais lindo, vans no geral gosto de todos independente.</p>
+                        </div>
+                        <div class="nikedunk"><a href="https://www.nike.com.br/dunk-low-prm-025380.html?cor=51&gad_source=1&gclid=CjwKCAiAu9yqBhBmEiwAHTx5p1LibF-x_Zu3cWdK5XfQMRWaGlAIlUsyxsnACtecr_eisuPR6noJ6hoCjOQQAvD_BwE" target="_blank"><h4>Nike Dunk</h4></a>
+                            <img src="images/nikedunk.png" alt="dunk-low-prm-025380">
+                            <p>Acho LINDO esse dunk, parece junino mas acho ele lindo demais, não sou fã de todods os dunks mas esse gostei bastante.</p>
+                        </div>
+                    </div>
+                </div>
         </div>
     </section>
 <!--fim dos produtos-->
