--- a/index.html
+++ b/index.html
@@ -179,7 +179,31 @@
         </div>
     </section>
 <!--fim dos produtos-->
-
+<!--eu e cury start-->
+<section class="nos" id="nos">
+    <div class="sobrenos"><h3>SOBRE NÓS!</h3></div>
+    <div class="vitor">
+        <div class="imgvitor">
+            <img src="images/VITORTR.png" alt="Vitor">
+        </div>
+        <div class="contentv">
+            <h4>Vitor</h4>
+            <span>Front-End Developer</span>
+            <p>Meu nome é Vitor, sou estudante de Engenharia de Software na PUC Minas, iniciei no front-end pois gostava muito de design, mas também me identifico muito com o mundo da programação, então vi no desenvolvimento front-end, uma oportunidade de unir minhas duas áreas preferidas, o desenho do site, foi de responsabilidade minha, enquanto a produção foi realizada em conjunto com o Thiago.</p>
+        </div>
+    </div>
+    <div class="cury">
+        <div class="contentt">
+            <h4>Cury</h4>
+            <span>Front-End Developer</span>
+            <p>Meu nome é Thiago, também faço Engenharia de Software, iniciei no mercado de tecnologia por sempre ter gostado de estar no meio, mas me surpreendi com o quão amplo são as possibilidades, atualmente, busco entender e fazer projetos relacionados à todas as áreas, para saber qual mais me interessa profissionalmente, nesse projeto pude aprender muito sobre desenvolvimento front-end.</p>
+        </div>
+        <div class="imgcury">
+            <img src="images/CURYTR.png" alt="Vitor">
+        </div>
+    </div>
+</section>
+<!--eu e cury ends-->
 
 
 
